ocp-image-deployment/deployment-spring-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: spring-web
  name: spring-web
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spring-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring-web
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/spring-web
        imagePullPolicy: Always
        name: spring-web
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
